# NN

./: ActivationFunctions.cpp  ActivationFunctions.h  CMakeLists.txt  FFClassifier.cpp  FFClassifier.h  Matrix.cpp  Matrix.h  MnistLoader.cpp  MnistLoader.h  NNClassifier.cpp  NNClassifier.h  NNRegressor.cpp  NNRegressor.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  README.md  input.txt  main.cpp  output.txt  tests.cpp
